# VG101-2020-RC-for-C

RC/: VG101 Jigang RC 6 - Pointers, File Operation, Debugging, and Commonly-used Algorithms.md  VG101 Jigang RC1 - Unix-like, compilation and C Programming.md  VG101 Jigang RC5 - Recursion, Array, Algorithm and Data Structure.html  VG101 Jigang RC5 - Recursion, Array, Algorithm and Data Structure.md
RC/pointer/: BFS.c  CMakeLists.txt  DFS1.c  fcmemd.c  fcptr.c  findNDS.c  memd.c  think1.c  think2.c  wptr.c
